--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 bytemuck = "1.15.0"
+clap = { version = "4.5.4", features = ["derive"] }
 futures = "0.3.30"
 glam = "0.27.0"
 num_enum = "0.7.2"
+regex = "1.10.4"
 wgpu = "0.19.1"
 winit = "0.29.10"
