--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,8 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: Swatinem/rust-cache@v2
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
+    - name: Run unit tests
       run: cargo test --verbose
