--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,8 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: Swatinem/rust-cache@v2
     - uses: actions/checkout@v4
+    - run: rustup toolchain install stable --profile minimal # Required for rust-cache
+    - uses: Swatinem/rust-cache@v2
     - name: Build
       run: cargo build --verbose
     - name: Run unit tests
