--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,18 +2,16 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "ci-dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "ci-dev" ]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - run: rustup toolchain install stable --profile minimal # Required for rust-cache
@@ -22,5 +20,3 @@ jobs:
       run: cargo build --verbose
     - name: Run unit tests
       run: cargo test --verbose
-    - name: Experiment
-      run: ls -a
