--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,13 +20,5 @@ jobs:
       run: cargo build --verbose
     - name: Run unit tests
       run: cargo test --verbose
-
-    # Upload artifacts
-    - run: mkdir -p build-artifact
-    - run: mv target/debug/ci_rom_test build-artifact/ci_rom_test
-    - uses: actions/upload-artifact@v4
-      with:
-        name: build-artifact
-        path: build-artifact
-        overwrite: true
+    - run: echo "(Job summary test)" >> $GITHUB_STEP_SUMMARY
     
