--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         path: test_roms
         repository: retrio/gb-test-roms
     - name: Run rom tests
-      run: target/debug/ci_rom_test test_roms/cpu_instrs/individual/01-special.gb
-    - name: Run rom tests and report
-      run: target/debug/ci_rom_test test_roms/cpu_instrs/individual/01-special.gb >> $GITHUB_STEP_SUMMARY
+      run: |
+        echo "# Test Summary\n\n" >> $GITHUB_STEP_SUMMARY
+        target/debug/ci_rom_test test_roms/cpu_instrs/individual/01-special.gb test_roms/cpu_instrs/individual/02-interrupts.gb test_roms/cpu_instrs/individual/03-op sp,hl.gb test_roms/cpu_instrs/individual/04-op r,imm.gb test_roms/cpu_instrs/individual/05-op rp.gb test_roms/cpu_instrs/individual/06-ld r,r.gb test_roms/cpu_instrs/individual/07-jr,jp,call,ret,rst.gb test_roms/cpu_instrs/individual/08-misc instrs.gb test_roms/cpu_instrs/individual/09-op r,r.gb test_roms/cpu_instrs/individual/10-bit ops.gb test_roms/cpu_instrs/individual/11-op a,(hl).gb >> $GITHUB_STEP_SUMMARY
     
