--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.5.4", features = ["derive"] }
 futures = "0.3.30"
 glam = "0.27.0"
 num_enum = "0.7.2"
+pollster = "0.3.0"
 regex = "1.10.4"
 wgpu = "22.1.0"
-winit = "0.29.10"
+winit = "0.30.5"
