--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bytemuck = "1.15.0"
 clap = { version = "4.5.4", features = ["derive"] }
+egui = "0.28.1"
 futures = "0.3.30"
 glam = "0.27.0"
 num_enum = "0.7.2"
